
- #10595: Tail calls with up to 64 arguments are guaranteed to be compiled
  as tail calls.  To this end, memory locations in the domain state
  are used for passing arguments that do not fit in registers.
  (Xavier Leroy, review by Vincent Laviron)

- #10681: Enforce boolean conditions for the native backend
  (Vincent Laviron, review by Gabriel Scherer)

- #10728: Ensure that functions are evaluated after their arguments
  (Stephen Dolan, review by Mark Shinwell)

- #10732: Ensure right-to-left evaluation of arguments in cmm_helpers
  (Greta Yorsh, review by Xavier Leroy)

### Standard library:

* #10710: Add UTF tools, codecs and validations to the Uchar, Bytes and
  String modules.
  (Daniel Bünzli, review by Florian Angeletti, Nicolás Ojeda Bär, Alain
   Frisch and Gabriel Scherer)

* #10622: Annotate `Uchar.t` with immediate attribute
  (Hongbo Zhang, reivew by Gabriel Scherer and Nicolás Ojeda Bär)

* #7812, #10475: `Filename.chop_suffix name suff` now checks that `suff`
  is actually a suffix of `name` and raises Invalid_argument otherwise.
  (Xavier Leroy, report by whitequark, review by David Allsopp)

* #10482: mark the Stream and Genlex modules as deprecated, in preparation
  for a future removal.  These modules (without deprecation alert)
  are now provided by the camlp-streams library.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #10526: add Random.bits32, Random.bits64, Random.nativebits
  (Xavier Leroy, review by Gabriel Scherer and François Bobot)

* #10568: remove Obj.marshal and Obj.unmarshal
  (these functions have been deprecated for a while and are superseded
   by the functions from module Marshal)
  (François Pottier, review by Gabriel Scherer and Kate Deplaix)

- #10545: Add In_channel and Out_channel modules.
  (Nicolás Ojeda Bär, review by Daniel Bünzli, Simon Cruanes, Gabriel Scherer,
  Guillaume Munch-Maccagnoni, Alain Frisch and Xavier Leroy)

- #10538: add Out_channel.set_buffered and Out_channel.is_buffered to control